# SNANDer

./: CMakeLists.txt
src/: bitbang_microwire.c  ch341a_i2c.c  ch341a_spi.c  ch347_i2c.c  ch347_spi.c  ch347_spi.h  device_opt.h  i2c_eeprom.c  main.c  spi_controller.c  spi_eeprom.c  spi_nand_flash.c  spi_nand_flash.h  spi_nor_flash.c
